Follow up to Bug 135231, fix a crasher due to a double free. r/sr=bienvenu